# MusicShop

./: .dockerignore  .env_example  .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml  readme.md  run.sh  testFaker.py
MusicalStore/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: admin.py  forms.py  models.py  task.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_addressuser.py
backend_storages/: s3.py
card/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
card/migrations/: 0001_initial.py  0002_initial.py  0002_order_status.py  0003_alter_order_status.py  0003_deliveryman_order_delivery.py  0004_order_address.py
catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_catalogitem_name.py
catalog/signals/: delete_cache_after_crud.py
catalog/templatetags/: catalog_tag.py
characteristic/: admin.py  apps.py  forms.py  mixin.py  models.py  urls.py  views.py
characteristic/migrations/: 0001_initial.py  0002_alter_brand_options_alter_feature_options_and_more.py
characteristic/templatetags/: list_features.py
common_models/: admin.py  apps.py  forms.py  models.py
common_models/migrations/: 0001_initial.py  0002_initial.py  0003_alter_productsubfeature_options.py  0003_alter_productsubfeature_unique_together.py
products/: admin.py  apps.py  filters.py  forms.py  mixins.py  models.py  service.py  urls.py  views.py
service/: nginx.conf  nginx_minio.conf  prometheus.yaml
templates/: base.html  home.html
(+64 files in other folders)
