[tool.poetry]
name = "musicalstore"
version = "0.1.0"
description = ""
authors = ["Roman <roma.makhunov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
pillow = "^10.2.0"
python-slugify = "^8.0.4"
django-mptt = "^0.16.0"
django-filter = "^24.2"
python-dotenv = "^1.0.1"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
django-storages = {extras = ["s3"], version = "^1.14.3"}
boto3 = "^1.34.105"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
faker = "^24.4.0"
requests = "^2.31.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
